--- a/支付回调通知.html
+++ b/支付回调通知.html
@@ -303,7 +303,7 @@
                   style="font-size: 16px;"> &nbsp;】以表示确认收到回调且数据符合预期 &nbsp; </span></p>
               <p><span style="font-size: 16px;"><strong>状态说明：</strong></span><span
                   style="font-size: 16px;">收到回调通知时要判断</span><strong>payStatus=</strong><span
-                  style="color: rgb(225, 60, 57);"><strong>SUCCESS</strong></span><span
+                  style="color: rgb(225, 60, 57);"><strong>1</strong></span><span
                   style="font-size: 16px;">表示订单支付成功，</span><span
                   style="font-size: 16px;"><strong>并判断</strong></span><span
                   style="color: rgb(225, 60, 57);"><strong>realAmount</strong></span><strong>是否与</strong><span
@@ -347,7 +347,7 @@
                     <td colspan="1" rowspan="1" width="auto">Integer</td>
                     <td colspan="1" rowspan="1" width="auto">是</td>
                     <td colspan="1" rowspan="1" width="auto">订单状态；<strong>只有 </strong><span
-                        style="color: rgb(225, 60, 57);"><strong>0</strong></span><strong> 表示支付成功</strong></td>
+                        style="color: rgb(225, 60, 57);"><strong>1</strong></span><strong> 表示支付成功</strong></td>
                     <td colspan="1" rowspan="1" width="auto">0 </td>
                   </tr>
                   <tr>
