--- a/发起支付.html
+++ b/发起支付.html
@@ -394,6 +394,13 @@
                     <td colspan="1" rowspan="1" width="auto">zhangsan33@gmail.com</td>
                   </tr>
                   <tr>
+                    <td colspan="1" rowspan="1" width="auto">authCode</td>
+                    <td colspan="1" rowspan="1" width="auto">String</td>
+                    <td colspan="1" rowspan="1" width="auto"></td>
+                    <td colspan="1" rowspan="1" width="auto">用户授权码（alipay）</td>
+                    <td colspan="1" rowspan="1" width="auto">2847593857482953</td>
+                  </tr>
+                  <tr>
                     <td colspan="1" rowspan="1" width="auto">remark</td>
                     <td colspan="1" rowspan="1" width="auto">String</td>
                     <td colspan="1" rowspan="1" width="auto"></td>
